# docktors_reaviews

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
patient-app/: main.py
patient-app/alembic/versions/: 2024_06_24_1439-df53c04cfa15_.py
patient-app/api/api_v1/: users.py
patient-app/core/: config.py
patient-app/core/models/: __init__.py  base.py  db_helper.py  user.py
patient-app/core/models/mixins/: int_id_pk.py
patient-app/core/schemas/: user.py
patient-app/utils/: case_converter.py
